--- a/MathCore.ASP/MathCore.ASP.csproj
+++ b/MathCore.ASP/MathCore.ASP.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>MathCore.ASP.snk</AssemblyOriginatorKeyFile>
-    <Version>0.0.1</Version>
-    <PackageReleaseNotes>Добавлен Таг-хелпер активации элемента</PackageReleaseNotes>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <Version>0.0.2</Version>
+    <PackageReleaseNotes>Обновление платформы</PackageReleaseNotes>
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <IncludeSymbols>true</IncludeSymbols>
@@ -18,7 +23,6 @@
     <PackageProjectUrl>https://github.com/Infarh/MathCore.ASP</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Infarh/MathCore.ASP.git</RepositoryUrl>
     <PackageTags>ASP.NET Tools</PackageTags>
-    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -30,7 +34,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
 
